--- a/Views/OscilloscopeView.xaml
+++ b/Views/OscilloscopeView.xaml
@@ -1,13 +1,16 @@
 ﻿<UserControl x:Class="P_SCAAT.Views.OscilloscopeView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:converters="clr-namespace:P_SCAAT.Views.ValueConverters"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:viewModels="clr-namespace:P_SCAAT.ViewModels"
              mc:Ignorable="d"
              d:DataContext="{d:DesignInstance Type=viewModels:OscilloscopeViewModel}"
              d:DesignWidth="400">
     <UserControl.Resources>
+
+        <converters:InverseBooleanConverter x:Key="InverseBooleanConverter"/>
 
         <Style TargetType="Button" x:Key="RoundButton">
             <Style.Resources>
@@ -36,7 +39,7 @@
         </Grid.RowDefinitions>
 
         <!--<Button Content="TEST BUTTON" Command="{Binding OsciloscopeViewModel.CreateOsciloscopeSessionCommand}" CommandParameter="{Binding OsciloscopeViewModel.SelectedAvailableOsciloscopes, Mode=OneWay}" Margin="73,50,0,0" HorizontalAlignment="Left" VerticalAlignment="Top"/>-->
-        <Grid Grid.Row="0">
+        <Grid Grid.Row="0" IsEnabled="{Binding MeasurementInProgress, Mode=OneWay, Converter={StaticResource InverseBooleanConverter}}">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="Auto"/>
@@ -96,7 +99,7 @@
 
         </Grid>
 
-        <Grid Grid.Row="1">
+        <Grid Grid.Row="1" IsEnabled="{Binding MeasurementInProgress, Mode=OneWay, Converter={StaticResource InverseBooleanConverter}}">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="Auto"/>
@@ -137,17 +140,18 @@
                 <ColumnDefinition/>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
-            <DockPanel Grid.Row="0" VerticalAlignment="Top" HorizontalAlignment="Stretch">
+            <DockPanel Grid.Row="0" VerticalAlignment="Top" HorizontalAlignment="Stretch" IsEnabled="{Binding MeasurementInProgress, Mode=OneWay, Converter={StaticResource InverseBooleanConverter}}">
                 <Label Content="Traces in total:" DockPanel.Dock="Left" FontWeight="Bold"/>
                 <TextBox Text="{Binding TracesTotal}" DockPanel.Dock="Right" HorizontalAlignment="Right" VerticalContentAlignment="Center" Width="50" Height="20"/>
             </DockPanel>
-            <DockPanel Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Stretch">
+            <DockPanel Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Stretch" IsEnabled="{Binding MeasurementInProgress, Mode=OneWay, Converter={StaticResource InverseBooleanConverter}}">
                 <Label Content="Traces per file:" DockPanel.Dock="Left" FontWeight="Bold"/>
                 <TextBox Text="{Binding TracesPerFile}" DockPanel.Dock="Right" VerticalContentAlignment="Center" HorizontalAlignment="Right" Width="50" Height="20"/>
             </DockPanel>
 
             <DataGrid Grid.Row="0" Grid.RowSpan="5" Grid.Column="1"
                       ItemsSource="{Binding WaveformSource, Mode=OneWay}"
+                      IsEnabled="{Binding MeasurementInProgress, Mode=OneWay, Converter={StaticResource InverseBooleanConverter}}"
                       MinHeight="50" AutoGenerateColumns="False" HorizontalAlignment="Center"
                       CanUserResizeRows="False" CanUserDeleteRows="False"
                       CanUserAddRows="False" CanUserResizeColumns="False"
@@ -166,7 +170,7 @@
                 </DataGrid.Columns>
             </DataGrid>
 
-            <DockPanel Grid.Row="2" VerticalAlignment="Top" HorizontalAlignment="Stretch">
+            <DockPanel Grid.Row="2" VerticalAlignment="Top" HorizontalAlignment="Stretch" IsEnabled="{Binding MeasurementInProgress, Mode=OneWay, Converter={StaticResource InverseBooleanConverter}}">
                 <Label Content="Message lenght [bytes]:" DockPanel.Dock="Left" FontWeight="Bold"/>
                 <TextBox Text="{Binding MessageLenght, Mode=TwoWay}" DockPanel.Dock="Right" 
                          HorizontalAlignment="Right" VerticalContentAlignment="Center" 
